--- a/Makefile.wasm
+++ b/Makefile.wasm
@@ -19,12 +19,14 @@ CXX_FLAGS = \
 	-s USE_SDL=2 \
 	-s USE_SDL_IMAGE=2 \
 	-s USE_SDL_TTF=2 \
+	-s USE_SDL_MIXER=2 \
 	-s SDL2_IMAGE_FORMATS='["png"]' \
 	-s DISABLE_EXCEPTION_CATCHING=0 \
 	-s WASM=1
 EXEC_FLAGS = \
 	--preload-file assets \
-	-s EXPORTED_FUNCTIONS='["_mainf"]'
+	-s EXPORTED_FUNCTIONS='["_mainf"]' \
+	-s EXTRA_EXPORTED_RUNTIME_METHODS='["ccall"]'
 LIBS :=
 
 SRC_FILES := $(wildcard $(SRC_DIR)/*.cpp)
